# skill_opt

./: .env.example  .gitignore  CHANGELOG.md  CONSTITUTION.md  README.md  pyproject.toml
REPLAY/: EXPERIMENTS.md  LEDGER.md  PROPOSAL.md  README.md
REPLAY/Doc/: README.md  budget_estimate.md
REPLAY/latex/: README.md  main.tex  refs.bib
REPLAY/latex/sections/: conclusion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex
REPLAY/results/: README.md
REPLAY/script/: README.md  copilot_probe.py  gate1_ceiling.py  smoke_tau2.py  tau2_probe.py
WildLoop/: LEDGER.md  PROPOSAL.md  README.md
WildLoop/Doc/: README.md
WildLoop/latex/: README.md  main.tex  refs.bib
WildLoop/results/: README.md
WildLoop/script/: README.md
data/: README.md
docs/: README.md  benchmark_choice_20260706.md  benchmark_choice_raw.json  cage_v2_design_20260711.md  cage_v2_survey_raw.json  decisions_20260705.md  exp0_review_20260712.md  field_direction_20260706.md  field_direction_raw.json  gaa_cage_proposal_20260706.md  gaa_due_diligence_raw.json  grace_design_20260712.md  harness_blog_takeaways_20260711.md  judge_design_20260706.md  judge_survey_raw.json  lit_survey_20260705.md  lit_survey_20260705_raw.json  method.md  mvp_report_review_20260711.md  pivot_due_diligence_raw.json  pivot_proposal_20260705.md  review_response_20260706.md  review_verification_raw.json  sanity_check.md  supp_results_discussion_20260711.md  trans.md
outside_reports/: final_report.md
shared/: README.md  fetch_bib.py  llm.py  paths.py  runharness.py  stats.py  tau2_compat.py
(+62 files in other folders)
