[project]
name = "skill-opt"
version = "0.1.0"
description = "Training-free skill optimization papers (REPLAY, WildLoop) - shared infra"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.40",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
